@@ -1,5 +1,10 @@
 2008-01-07 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/fileload.c: Fix a bug that the cancel button on the file selection
+	dialog is removed when an user press it.
+
+2008-01-07 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_image_win.c, src/gimv_thumb_win.c: Use GTK's stock items
 	for toolbar buttons.
 
